--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,12 @@
         </dependency>
 
 
-        <dependency>
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.19</version>
         </dependency>
+        -->
 
         <!-- map repsentations of java to xml -->
         <dependency>
